[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Images/MenuIcons/conversation.png" type="Texture" id=1]
[ext_resource path="res://assets/Images/MenuIcons/back-forth.png" type="Texture" id=2]
[ext_resource path="res://assets/Images/MenuIcons/checkbox-tree.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/MenuIcons/info.png" type="Texture" id=4]
[ext_resource path="res://assets/Images/MenuIcons/bookmark.png" type="Texture" id=5]
[ext_resource path="res://scenes/UI/PartyTab.gd" type="Script" id=6]
[ext_resource path="res://scenes/UI/PartyTabRightPanel.gd" type="Script" id=7]
[ext_resource path="res://scenes/UI/ActivePartyGrid.gd" type="Script" id=8]
[ext_resource path="res://scenes/UI/AvailablePartyGrid.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="PartyTab" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 15.0
margin_right = -17.0
margin_bottom = -15.0

[node name="LeftPanel" type="Panel" parent="HBoxContainer"]
margin_right = 305.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 12 )

[node name="LeftVBox" type="VBoxContainer" parent="HBoxContainer/LeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="HBoxContainer/LeftPanel/LeftVBox"]
margin_right = 305.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Party"
align = 1

[node name="ActivePartyVBox" type="VBoxContainer" parent="HBoxContainer/LeftPanel/LeftVBox"]
margin_top = 18.0
margin_right = 305.0
margin_bottom = 119.0
size_flags_vertical = 3

[node name="Label3" type="Label" parent="HBoxContainer/LeftPanel/LeftVBox/ActivePartyVBox"]
margin_right = 305.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Active"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/LeftPanel/LeftVBox/ActivePartyVBox"]
margin_top = 18.0
margin_right = 305.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActivePartyGrid" type="GridContainer" parent="HBoxContainer/LeftPanel/LeftVBox/ActivePartyVBox/CenterContainer"]
margin_left = 152.0
margin_top = 41.0
margin_right = 152.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5
script = ExtResource( 8 )

[node name="AvailablePartyVBox" type="VBoxContainer" parent="HBoxContainer/LeftPanel/LeftVBox"]
margin_top = 123.0
margin_right = 305.0
margin_bottom = 224.0
size_flags_vertical = 3

[node name="Label3" type="Label" parent="HBoxContainer/LeftPanel/LeftVBox/AvailablePartyVBox"]
margin_right = 305.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Available"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/LeftPanel/LeftVBox/AvailablePartyVBox"]
margin_top = 18.0
margin_right = 305.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AvailablePartyGrid" type="GridContainer" parent="HBoxContainer/LeftPanel/LeftVBox/AvailablePartyVBox/CenterContainer"]
margin_left = 152.0
margin_top = 41.0
margin_right = 152.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5
script = ExtResource( 9 )

[node name="ActionMenu" type="CenterContainer" parent="HBoxContainer/LeftPanel/LeftVBox"]
margin_top = 228.0
margin_right = 305.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/LeftPanel/LeftVBox/ActionMenu"]
margin_left = 64.0
margin_top = 35.0
margin_right = 240.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/LeftPanel/LeftVBox/ActionMenu/GridContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 1 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer/LeftPanel/LeftVBox/ActionMenu/GridContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 2 )
expand = true

[node name="TextureButton3" type="TextureButton" parent="HBoxContainer/LeftPanel/LeftVBox/ActionMenu/GridContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 4 )
expand = true

[node name="TextureButton4" type="TextureButton" parent="HBoxContainer/LeftPanel/LeftVBox/ActionMenu/GridContainer"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 5 )
expand = true

[node name="TextureButton5" type="TextureButton" parent="HBoxContainer/LeftPanel/LeftVBox/ActionMenu/GridContainer"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 3 )
expand = true

[node name="RightPanel" type="Panel" parent="HBoxContainer"]
margin_left = 309.0
margin_right = 614.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 12 )
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/RightPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightPanel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 285.0
margin_bottom = 330.0

[node name="NameContainer" type="HBoxContainer" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer"]
margin_right = 265.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer/NameContainer"]
margin_right = 42.0
margin_bottom = 14.0
text = "Name:"

[node name="Value" type="Label" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer/NameContainer"]
margin_left = 46.0
margin_right = 90.0
margin_bottom = 14.0
text = "Steebo"

[node name="HealthContainer" type="HBoxContainer" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 265.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer/HealthContainer"]
margin_right = 46.0
margin_bottom = 14.0
text = "Health:"

[node name="Value" type="Label" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer/HealthContainer"]
margin_left = 50.0
margin_right = 58.0
margin_bottom = 14.0
text = "0"

[node name="SpeedContainer" type="HBoxContainer" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 265.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer/SpeedContainer"]
margin_right = 43.0
margin_bottom = 14.0
text = "Speed:"

[node name="Value" type="Label" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer/SpeedContainer"]
margin_left = 47.0
margin_right = 55.0
margin_bottom = 14.0
text = "0"

[node name="ActionPointsContainer" type="HBoxContainer" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 265.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer/ActionPointsContainer"]
margin_right = 89.0
margin_bottom = 14.0
text = "Action Points:"

[node name="Value" type="Label" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer/ActionPointsContainer"]
margin_left = 93.0
margin_right = 101.0
margin_bottom = 14.0
text = "0"

[node name="Label" type="Label" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 265.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Equipped Convictions:"
align = 1
valign = 1

[node name="EquippedConvictionsContainer" type="HBoxContainer" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 265.0
margin_bottom = 189.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ItemList" type="ItemList" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer/EquippedConvictionsContainer"]
margin_right = 265.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false ]
auto_height = true
same_column_width = true

[node name="Label2" type="Label" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 265.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Known Convictions:"
align = 1
valign = 1

[node name="AvailableConvictionsContainer" type="HBoxContainer" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer"]
margin_top = 211.0
margin_right = 265.0
margin_bottom = 310.0
size_flags_vertical = 3
alignment = 1

[node name="ItemList" type="ItemList" parent="HBoxContainer/RightPanel/MarginContainer/VBoxContainer/AvailableConvictionsContainer"]
margin_right = 265.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false ]
auto_height = true
same_column_width = true

[connection signal="visibility_changed" from="HBoxContainer/RightPanel" to="HBoxContainer/RightPanel" method="_on_RightPanel_visibility_changed"]
[connection signal="item_activated" from="HBoxContainer/RightPanel/MarginContainer/VBoxContainer/AvailableConvictionsContainer/ItemList" to="HBoxContainer/RightPanel" method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="HBoxContainer/RightPanel/MarginContainer/VBoxContainer/AvailableConvictionsContainer/ItemList" to="HBoxContainer/RightPanel" method="_on_ItemList_item_selected"]
